# KRONOS

./: CMakeLists.txt  Readme.md
config/: ocp_config.json
include/: kronos_kkt_solver.hpp  kronos_nlp_wrapper.hpp  kronos_optimizer.hpp  kronos_solver.hpp  kronos_types.hpp
include/kronos/solver/: fatrop_wrapper.hpp
include/kronos/utils/: exporter.hpp  interpolator.hpp  library_loader.hpp  mesh_refiner.hpp  timer.hpp
include/ocp/: casadi_wrapper.hpp  flight_ocp.hpp
include/planner/: trajectory_planner.hpp
include/solver/: ipm_core.hpp  schur_complement.hpp
include/utils/: casadi_wrapper.hpp
offline_codegen/: generate_adaptive.py  generate_adaptive_cav.py  generate_adaptive_nfz.py  generate_brachistochrone.py  generate_cav_h.py  generate_cav_h_nfz.py  generate_math_map.py  generate_simple_constrained.py  generate_vanderpol.py
python_demo/: adaptive_mesh.py  collocation.py  config.py  dynamics.py  error_analysis.py  main.py  visualization.py
scripts/: codegen_brachistochrone.py  codegen_simple_ipm.py  generate_brach.py  generate_cav_h.py  generate_nlp_casadi.py  generate_ocp.py  generate_pm2d.py
src/: kronos_kkt_solver.cpp  kronos_nlp_wrapper.cpp  kronos_optimizer.cpp  kronos_solver.cpp  main.cpp  run_brachistochrone.cpp  run_simple_constrained.cpp
src/codegen/: casadi_brach.c  casadi_codegen.c  casadi_pm2d.c
src/ocp/: flight_ocp.cpp
src/planner/: trajectory_planner.cpp
src/solver/: fatrop_wrapper.cpp
tests/: test_casadi_eval.cpp
